--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Legends -- France'
 - !lcsh 'Folklore -- France'
+- GITenberg
 title: Légendes rustiques
 url: http://www.gutenberg.org/ebooks/17911
